force-app/main/default/objects/CWS_Outbound_Campaign_Roles__c/CWS_Outbound_Campaign_Roles__c.object-meta.xml
<CustomObject>
    <description>Custom object created to store Role/Campaign mapping.</description>
    <label>Outbound Campaign Roles</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Campaign Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>