force-app/main/default/objects/CWS_Outbound_Campaign_Roles__c/fields/CWS_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CWS_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Outbound Campaign Roles</relationshipLabel>
    <relationshipName>Outbound_Campaign_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>