force-app/main/default/objects/CWS_Outbound_Campaign_Roles__c/fields/CWS_Expansion_vs_Aquistion_vs_Digital__c.field-meta.xml
<CustomField>
    <fullName>CWS_Expansion_vs_Aquistion_vs_Digital__c</fullName>
    <label>Expansion vs. Aquistion vs. Digital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>