force-app/main/default/objects/CWS_Outbound_Campaign_Roles__c/fields/CWS_Lead_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Source_Most_Recent__c</fullName>
    <label>Lead Source Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Channel Generated</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Deal Reg</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Distributor Recruitment</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email Transactional</fullName>
            </value>
            <value>
                <fullName>Events Hosted</fullName>
            </value>
            <value>
                <fullName>Events Sponsored</fullName>
            </value>
            <value>
                <fullName>List Import</fullName>
            </value>
            <value>
                <fullName>Marketing Generated</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>NA/ Migrated Data</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Paid Media</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Partner Comms</fullName>
            </value>
            <value>
                <fullName>Partner Success</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Print Advertising</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Remarketing</fullName>
            </value>
            <value>
                <fullName>Review Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>