force-app/main/default/objects/CWS_Outbound_Campaign_Roles__c/fields/CWS_LeadSubSourceMostRecent__c.field-meta.xml
<CustomField>
    <fullName>CWS_LeadSubSourceMostRecent__c</fullName>
    <label>Lead Sub Source - Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Adroll</fullName>
            </value>
            <value>
                <fullName>ARN</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>BlueChip Infotech</fullName>
            </value>
            <value>
                <fullName>Blue Solutions</fullName>
            </value>
            <value>
                <fullName>Brightgauge Site</fullName>
            </value>
            <value>
                <fullName>BrightTalk</fullName>
            </value>
            <value>
                <fullName>BusinessCom</fullName>
            </value>
            <value>
                <fullName>Cannata</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>CBSInteractive</fullName>
            </value>
            <value>
                <fullName>Channel E2E</fullName>
            </value>
            <value>
                <fullName>Channel Futures</fullName>
            </value>
            <value>
                <fullName>Channel Pro</fullName>
            </value>
            <value>
                <fullName>Channel Pro UK</fullName>
            </value>
            <value>
                <fullName>ConnectWise Site</fullName>
            </value>
            <value>
                <fullName>Conversica</fullName>
            </value>
            <value>
                <fullName>CRN Channel Co</fullName>
            </value>
            <value>
                <fullName>CRN Next Media</fullName>
            </value>
            <value>
                <fullName>CRN UK Incisive Media</fullName>
            </value>
            <value>
                <fullName>D&amp;H</fullName>
            </value>
            <value>
                <fullName>Dekkers</fullName>
            </value>
            <value>
                <fullName>Demand Gen</fullName>
            </value>
            <value>
                <fullName>Doubleclick</fullName>
            </value>
            <value>
                <fullName>Drift</fullName>
            </value>
            <value>
                <fullName>e92Plus</fullName>
            </value>
            <value>
                <fullName>Ebertlang</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Exeed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>