force-app/main/default/objects/CWS_Outbound_Campaign_Roles__c/fields/CWS_RoleName__c.field-meta.xml
<CustomField>
    <fullName>CWS_RoleName__c</fullName>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>